--- a/style.css
+++ b/style.css
@@ -50,6 +50,9 @@ html {
       font-size: 1rem;
       color: #ccc;
     }
+    header a{
+      justify-content: end;
+    }
 
     section {
       padding: 2rem 5%;
@@ -158,6 +161,41 @@ html {
   
   
 }
+.btn {
+             position: absolute;
+  top: 20px;
+  right: 20px;
+  background: #00bcd4;
+  color: #fff;
+  padding: 10px 18px;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: 0.3s ease;
+
+        }
+        .btn:hover {
+  background: #0097a7;
+  transform: scale(1.07);
+}
+.tool-btn {
+             position: absolute;
+  top: 80px;
+  right: 20px;
+  background: #00bcd4;
+  color: #fff;
+  padding: 10px 18px;
+  border-radius: 8px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: 0.3s ease;
+
+        }
+        .tool-btn:hover {
+  background: #0097a7;
+  transform: scale(1.07);
+}
+
 
    
 
@@ -217,4 +255,4 @@ height: 25px;
    
   }  
  
-    }
+    
