--- a/tools/style.css
+++ b/tools/style.css
@@ -69,7 +69,7 @@
             border-radius: 18px;
             padding: 30px;
             text-align: center;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.05);
+            box-shadow: 0 10px 20px rgba(0,0,0,15);
             text-decoration: none;
             color: inherit;
             display: flex;
@@ -122,7 +122,7 @@ header {
     z-index: 1000;
    
 }
-.header-container { display: flex; justify-content: space-between; align-items: center; }
+.header-container { display: flex; justify-content: space-between; align-items: center;}
 .logo-area { display: flex; align-items: center; gap: 15px; }
 .logo-img { width: 50px; height: 50px; border-radius: 50%; }
 .brand-name { font-size: 24px; font-weight: bold; color: #333; }
@@ -138,21 +138,99 @@ footer { background: #1a1a1a; color: white; padding: 40px 5% 10px; }
     gap: 30px;
     margin-bottom: 30px;
 }
-.footer-box h3 { margin-bottom: 15px; border-bottom: 2px solid #e44d26; display: inline-block; }
+.footer-box h3 { margin-bottom: 0; border-bottom: 2px solid #e44d26; display: inline-block; }
 .social-icons { display: flex; gap: 20px; font-size: 24px; margin-top: 15px; }
 .social-icons a { color: rgb(252, 250, 250); transition: 0.3s; }
 .social-icons a:hover { color: #e44d26; }
 .footer-bottom { text-align: center; border-top: 1px solid #333; padding-top: 20px; font-size: 14px; }
+.hero{
+    padding: 20px 40px;
+    font-size: 30px;
+    color: rgb(109, 28, 237);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font: 700;
+    margin-bottom: 15px;
+    text-align: center;
+}
 
 
 
         @media (max-width: 600px) {
             .header h1 { font-size: 1.8rem; }
-            .tool-grid { grid-template-columns: 1fr; }
-            
+            .tool-grid { grid-template-columns: 1fr; margin-top: 10px; padding: 10px; }
+        }
 /* Mobile Responsive */
 @media (max-width: 768px) {
     header .header-container { flex-direction: column; gap: 10px; }
     .hero { height: 300px; }
-}
+   
+
+
+
+
+    .tool-logo {
+            width: 40px;
+            height: 40px;
+            margin-bottom: 10px;
+            object-fit: contain;
+            filter: drop-shadow(0 2px 5px rgba(0,0,0,0.1));
+            display: flex;
+            flex-direction: row;
         }
+
+        /* Dark mode mein logos thode bright dikhen */
+        [data-theme="dark"] .tool-logo {
+            filter: brightness(1.2);
+        }
+
+        .card-top h3 { margin-bottom: 10px; font-size: 1rem; color: var(--text); }
+        .card p { font-size: 0.8rem; color: var(--text-sub); line-height: 1.5; font-weight: 600; color: #000;
+           
+            
+        
+        }
+
+
+
+         .card {
+            background: var(--card-bg);
+            border-radius: 12px;
+            padding: 10px;
+            text-align: center;
+            box-shadow: 0 10px 20px rgba(0,0,0,15);
+            text-decoration: none;
+            color: inherit;
+            /* display: flex;
+            flex-direction: column; */
+            align-items: self-start;
+            border: 1px solid var(--border);}
+            
+            
+.card-top{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+     justify-items: auto; 
+    margin: 3px;
+    padding: 2px;
+    align-items: center;
+    
+    
+}
+.card-top h3{
+    align-items: center;
+    
+    
+    
+    justify-content: space-between;
+   
+}
+}
+    
+    
+
+    
+
+        
+
+        
