--- a/tools/style.css
+++ b/tools/style.css
@@ -102,6 +102,7 @@
 
         .card h3 { margin-bottom: 12px; font-size: 1.3rem; color: var(--text); }
         .card p { font-size: 0.9rem; color: var(--text-sub); line-height: 1.5; }
+        .card img{border-radius: 12px;}
 
         .btn {
             margin-top: 20px;
@@ -150,6 +151,26 @@ footer { background: #1a1a1a; color: white; padding: 40px 5% 10px; }
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font: 700;
     margin-bottom: 15px;
+    text-align: center;
+}
+.diff{
+    text-align: center;
+    color: rgb(109, 28, 237);
+    font-size: 30px;
+    font-weight: 900px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    border: black 1px solid;
+    border-radius: 12px;
+    padding: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    align-items: center;
+    background-color: #00d2ff;
+}
+.dif{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
