--- a/job/job.css
+++ b/job/job.css
@@ -177,6 +177,16 @@ p{
       font-size: 0.9rem;
       color: #120c0c;}
 
+      .grid-box table tr td a{ color: #4715eb;
+  text-decoration: none;
+  padding: 8px 20px;
+  font-size: 20px;
+  transition: 0.3s ease;
+  background-color: aqua;
+  border: #000 solid 3px;
+  border-radius: 50%;
+  text-align: center;}
+
 
 /* 📱 Responsive (Mobile) */
 @media (max-width: 600px) {
