--- a/job/job.css
+++ b/job/job.css
@@ -154,6 +154,7 @@ p{
   border: #000 solid 3px;
   border-radius: 50%;
   text-align: center;
+  word-wrap: break-word;
 }
     .grid-box a:hover {
   background: #112bf5;
