--- a/job/job.css
+++ b/job/job.css
@@ -46,9 +46,9 @@
       color: #ccc;
     }
 
-    section {
+    /* section {
       padding: 2rem 5%;
-    }
+    } */
 
     nav{
         background-color: #00bcd4;
@@ -77,6 +77,7 @@ p{
   gap: 20px;
   max-width: 1000px;
   margin: auto;
+  padding: 5px 5px 5px;
 }
 
 /* Grid boxes */
@@ -108,6 +109,7 @@ p{
   color: #000;
   font-size: 15px;
   text-align: left;
+  
  
 }
  nav a {
