--- a/job/job.css
+++ b/job/job.css
@@ -46,9 +46,9 @@
       color: #ccc;
     }
 
-    /* section {
+     /* section {
       padding: 2rem 5%;
-    } */
+    }   */
 
     nav{
         background-color: #00bcd4;
@@ -77,7 +77,9 @@ p{
   gap: 20px;
   max-width: 1000px;
   margin: auto;
-  padding: 5px 5px 5px;
+   padding-top: 25px;
+  
+ 
 }
 
 /* Grid boxes */
@@ -88,7 +90,8 @@ p{
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   text-align: center;
   transition: transform 0.3s ease;
-}
+    overflow: hidden; 
+}  
 
 
 
@@ -96,6 +99,7 @@ p{
   margin-bottom: 10px;
   color: #333;
   background-color: #00bcd4;
+  
 }
 
 
