--- a/job/job.css
+++ b/job/job.css
@@ -8,7 +8,7 @@
     body {
         background-color: #a8ecf4;
       
-      color: #fff;
+      color:black;
       line-height: 1.6;
       overflow-x: hidden;
     }
@@ -133,6 +133,7 @@ p{
   text-align: center;
   font-size: 20px;
   border: #000 solid 1px;
+  
 
 
 }
