--- a/tools/style.css
+++ b/tools/style.css
@@ -235,6 +235,7 @@ footer { background: #1a1a1a; color: white; padding: 40px 5% 10px; }
     margin: 3px;
     padding: 2px;
     align-items: center;
+    gap: 5px;
     
     
 }
